# greenhouse-api

./: .gitignore  README.md  greenhouse.db  init_db.py  main.py  pyproject.toml  todo.txt
app/: config.py  database.py  main.py  models.py
app/routers/: controls.py  sensors.py
app/schemas/: sensor.py
