[project]
name = "greenhouse-api"
version = "0.1.0"
description = "GreenHouse control API for ESP32"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "paho-mqtt>=1.6.1",
    "sqlalchemy>=2.0.48",
]
